# api-proxy

./: .clippy.toml  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  README.md  rust-toolchain.toml  rustfmt.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml
api/: auth-api.md  dashboard-api.md  logs-api.md  oauth-api.md  provider-keys-api.md  provider-types-api.md  public-stats-api.md  scheduling-strategies-api.md  system-api.md  user-provider-keys-api.md  user-service-api.md  users-api.md
benches/: cache_benchmarks.rs  memory_cache_bench.rs  mod.rs
config/: config.dev.toml  config.prod.toml  config.test.toml  config.toml  default.toml
deploy/: .env.production  Caddyfile  Caddyfile.example  Dockerfile  Dockerfile.backend  Dockerfile.cn  Dockerfile.frontend  README.md  SSL-README.md  deploy.sh  docker-compose.ssl.yaml  docker-compose.yaml  entrypoint.sh  nginx-gateway.conf  nginx-ssl.conf  nginx.conf  ssl-manager.sh
deploy/config/: config.dev.toml  config.prod.toml  config.toml
docs/: API.md  API_REFERENCE.md  ARCHITECTURE_OPTIMIZATION.md  CONFIGURATION.md  DESIGN.md  FLOW.md  FRONTEND_DESIGN.md  FRONTEND_DEVELOPER_ROLE.md  GEMINI.md  GOAL.md  MULTI_AUTH_IMPLEMENTATION_PLAN.md  MULTI_AUTH_INTEGRATION.md  OAUTH2_RECONSTRUCTION_PLAN.md  ROUTE.md  SCHEDULING_STRATEGY_DESIGN.md  TASKS.md  TASKS_V2.md  design.md  flow.md  key_pool_best_design.md  plan.md  provider_trait_refactor.md  timezone-enhancement-plan.md
entity/: Cargo.toml
entity/src/: api_health_status.rs  api_statistics.rs  daily_statistics.rs  error_logs.rs  health_status.rs  lib.rs  model_pricing.rs  model_pricing_tiers.rs  oauth_client_sessions.rs  oauth_sessions.rs  provider_api_keys.rs  provider_types.rs  proxy_tracing.rs  request_statistics.rs  tests.rs  tls_certificates.rs  user_audit_logs.rs  user_provider_keys.rs  user_service_api_providers.rs  user_service_apis.rs  user_sessions.rs  users.rs
frontend/: .env.local.example  .eslintrc.cjs  .prettierrc  API_AUDIT_REPORT.md  CLIPBOARD_ANALYSIS.md  README_CONFIG.md  TESTING.md  components.d.ts  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/: config.js
frontend/scripts/: build.sh
frontend/src/: App.vue  main.ts  vite-env.d.ts
migration/: Cargo.toml
migration/src/: lib.rs  m20240101_000001_create_users_table.rs  m20240101_000002_create_user_sessions_table.rs  m20240101_000003_create_user_audit_logs_table.rs  m20240101_000004_create_provider_types_table.rs  m20240101_000005_create_user_provider_keys_table.rs  m20240101_000006_create_user_service_apis_table.rs  m20240101_000007_create_api_health_status_table.rs  m20240101_000008_create_proxy_tracing_table.rs  m20240101_000008_create_request_statistics_table.rs  m20240101_000009_create_daily_statistics_table.rs  m20240101_000009_create_model_pricing_table.rs  m20240101_000010_create_model_pricing_tiers_table.rs  m20240101_000010_insert_default_admin_data.rs  m20240101_000011_create_user_service_api_providers_table.rs  m20240101_000011_insert_demo_request_statistics.rs  m20250126_000001_add_multi_auth_support.rs  m20250126_000001_create_oauth_sessions_table.rs  m20250126_000003_create_oauth_client_sessions_table.rs  m20251218_000001_add_log_mode_to_user_service_apis_table.rs  m20251218_000003_drop_unused_columns_from_provider_types_table.rs  m20251218_000004_drop_timeout_seconds_from_provider_types_table.rs  main.rs
src/: database.rs  dual_port_setup.rs  lib.rs  logging.rs  main.rs
src/app/: context.rs  mod.rs  resources.rs  service_registry.rs  services.rs  shared_services.rs  task_scheduler.rs  tasks.rs
src/auth/: api_key.rs  api_key_manager.rs  api_key_oauth_refresh_service.rs  api_key_oauth_service.rs  api_key_oauth_state_service.rs  api_key_oauth_token_refresh_task.rs  api_key_refresh_service.rs  api_key_refresh_task.rs  api_key_select_service.rs  api_key_usage_limit.rs  api_key_usage_limit_service.rs  auth_manager.rs  background_task_manager.rs  cache_strategy.rs  dual_auth_boundary.rs  gemini_code_assist_client.rs  header_parser.rs  jwt.rs  management.rs  middleware.rs  mod.rs  oauth_cleanup_task.rs  oauth_token_refresh_service.rs  oauth_token_refresh_task.rs  openai.rs  permissions.rs  pkce.rs  proxy.rs  rate_limit_dist.rs  service.rs  smart_api_key_provider.rs  strategy_manager.rs  types.rs  unified.rs  unified_refactored.rs  utils.rs
src/cache/: abstract_cache.rs  client.rs  integration.rs  keys.rs  mod.rs  strategies.rs
src/collect/: field_extractor.rs  mod.rs  request.rs  response.rs  service.rs  types.rs  usage_model.rs  util.rs
src/config/: app_config.rs  crypto.rs  database.rs  dual_port_config.rs  manager.rs  mod.rs  provider_config.rs  watcher.rs
src/error/: auth.rs  cache.rs  config.rs  conversion.rs  database.rs  key_pool.rs  macros.rs  management.rs  mod.rs  network.rs  prelude.rs  provider.rs  scheduler.rs  tests.rs  types.rs
src/health/: checker.rs  mod.rs  scheduler.rs  service.rs  types.rs
src/key_pool/: algorithms.rs  api_key_health.rs  api_key_rate_limit_reset_task.rs  api_key_scheduler_service.rs  mod.rs  pool_manager.rs  rate_limit_reset_task.rs  types.rs
src/management/: error.rs  middleware.rs  (+4 more)
test/: proxy.rest
tests/: api_flow_test.rs  api_key_health_status_test.rs  array_index_path_test.rs  auth_refactor_test.rs  auth_tests.rs  cache_test.rs  cache_tests.rs  claude_oauth_test.rs  e2e_api_test.rs  integration_test.rs  integration_tests.rs  layered_tracing_test.rs  model_extraction_test.rs  oauth_cleanup_integration_test.rs  oauth_provider_test.rs  orphaned_session_cleanup_test.rs  provider_types_admin_echo_test.rs  provider_types_crud_test.rs  proxy_core_test.rs  proxy_tests.rs  response_model_update_test.rs  sse_codec_test.rs  statistics_utils_test.rs  trace_tests.rs  util_tail_and_decompress_test.rs
web/: .eslintrc.cjs  AGENTS.md  CLAUDE.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
(+389 files in other folders)
