[package]
name = "api-proxy"
version = "0.1.0"
edition = "2021"
authors = ["AI Proxy Team"]
description = "Enterprise-grade AI service proxy platform"
license = "MIT"
repository = "https://github.com/your-org/api-proxy"
keywords = ["ai", "proxy", "rust", "pingora", "enterprise"]
categories = ["web-programming", "api-bindings"]
readme = "README.md"

# 工作空间配置
[workspace]
members = [
    ".",
    "migration",
    "entity",
]

# Linting configuration
[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_imports = "warn"
unused_variables = "warn"
dead_code = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Allow some pedantic lints that are too strict for our use case
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cargo_common_metadata = "allow"

[dependencies]
# 工作空间内依赖
entity = { path = "entity" }
migration = { path = "migration" }

# 基础依赖（Phase 1 需要的）
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
toml = "0.9.2"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
notify = "6.0"
base64 = "0.22"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"

# 核心依赖 - Pingora 和 Web 框架（使用最新版本）
pingora-core = {version = "0.5",features = ["openssl"]}
pingora-proxy = "0.5.0"
pingora-load-balancing = "0.5.0"
pingora-http = "0.5.0"
axum = "0.8.4"
sea-orm = { version = "1.1.13", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1.1.13"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
fastrand = "2.0"
clap = { version = "4.0", features = ["derive"] }
regex = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
jsonwebtoken = "9.0"
bcrypt = "0.15"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
num_cpus = "1.0"
ipnetwork = "0.20"

# 测试框架依赖（条件编译）
tempfile = { version = "3.0", optional = true }
mockall = { version = "0.12", optional = true }
wiremock = { version = "0.6", optional = true }

[dev-dependencies]
# 测试框架依赖
tokio-test = "0.4"
tempfile = "3.0"
rstest = "0.18"
mockall = "0.12"
wiremock = "0.6"
criterion = "0.5"
proptest = "1.0"
serial_test = "3.0"
once_cell = "1.19"
# 测试工具
pretty_assertions = "1.0"
# Note: reqwest 和 env_logger 已在主依赖中定义，无需重复

[features]
default = []
testing = ["tempfile", "mockall", "wiremock"]
