[package]
name = "api-proxy"
version = "0.1.0"
edition = "2024"
authors = ["AI Proxy Team"]
description = "Enterprise-grade AI service proxy platform"
license = "MIT"
repository = "https://github.com/your-org/api-proxy"
keywords = ["ai", "proxy", "rust", "pingora", "enterprise"]
categories = ["web-programming", "api-bindings"]
readme = "README.md"

# 工作空间配置
[workspace]
members = [
    ".",
    "migration",
    "entity",
]

# Linting configuration
[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_imports = "warn"
unused_variables = "warn"
dead_code = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Allow some pedantic lints that are too strict for our use case
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cargo_common_metadata = "allow"

[dependencies]
# 工作空间内依赖
entity = { path = "entity" }
migration = { path = "migration" }

# 基础依赖（Phase 1 需要的）
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "time"] }
tokio-stream = "0.1"
toml = "0.9"
thiserror = "2.0"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = {version = "0.3.20"}
notify = "8"
base64 = "0.22"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
md5 = "0.7"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
brotli-decompressor = "4"

# 核心依赖 - Pingora 和 Web 框架（使用最新版本）
pingora-core = {version = "0.6.0",features = ["openssl"]}
pingora-proxy = "0.6.0"
pingora-load-balancing = "0.6.0"
pingora-http = "0.6.0"
axum = "0.8.4"
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1"
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
fastrand = "2.0"
clap = { version = "4", features = ["derive"] }
regex = "1"
uuid = { version = "1", features = ["v4", "serde"] }
url = "2"
jsonwebtoken = "9"
oauth2 = "5"
bytes = "1"
bcrypt = "0.15"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
num_cpus = "1"
sysinfo = "0.37"
ipnetwork = "0.20"
serde_with = { version = "3", features = ["chrono"] }
urlencoding = "2"


# 测试框架依赖（条件编译）
tempfile = { version = "3", optional = true }
mockall = { version = "0.12", optional = true }
wiremock = { version = "0.6", optional = true }

[dev-dependencies]
# 测试框架依赖
tokio-test = "0.4"
tempfile = "3"
rstest = "0.18"
mockall = "0.12"
wiremock = "0.6"
criterion = "0.5"
proptest = "1"
serial_test = "3"
once_cell = "1"
# 测试工具
pretty_assertions = "1"
# Note: reqwest 和 env_logger 已在主依赖中定义，无需重复

[features]
default = []
testing = ["tempfile", "mockall", "wiremock"]
