[package]
name = "api-proxy"
version = "0.1.0"
edition = "2024"
authors = ["AI Proxy Team"]
description = "Enterprise-grade AI service proxy platform"
license = "MIT"
repository = "https://github.com/your-org/api-proxy"
keywords = ["ai", "proxy", "rust", "pingora", "enterprise"]
categories = ["web-programming", "api-bindings"]
readme = "README.md"

# 工作空间配置
[workspace]
members = [
    ".",
    "migration",
    "entity",
]

# Linting configuration
[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_imports = "warn"
unused_variables = "warn"
dead_code = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Allow some pedantic lints that are too strict for our use case
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"  # 允许多版本依赖，因为 Pingora 生态系统存在版本冲突

[workspace.dependencies]
# 工作空间内依赖
entity = { path = "entity" }
migration = { path = "migration" }

# 基础依赖（Phase 1 需要的）
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "time"] }
tokio-stream = "0.1"
toml = "0.9"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = {version = "0.3.20"}
notify = "8"
base64 = "0.22"
aes-gcm = "0.10"
hex = "0.4"
sha2 = "0.10"
md5 = "0.8.0"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
brotli-decompressor = "5.0"
dashmap = "6"
moka = { version = "0.12", features = ["future"] }

# 核心依赖 - Pingora 和 Web 框架（使用最新版本）
pingora-core = {version = "0.6.0",features = ["openssl"]}
pingora-proxy = "0.6.0"
pingora-load-balancing = "0.6.0"
pingora-http = "0.6.0"
axum = "0.8.4"
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1"
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
regex = "1"
uuid = { version = "1", features = ["v4", "serde"] }
url = "2"
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
oauth2 = "5"
bytes = "1"
bcrypt = "0.17.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
num_cpus = "1"
sysinfo = "0.37"
ipnetwork = "0.21.1"
serde_with = { version = "3", features = ["chrono"] }
urlencoding = "2"

# 统一依赖版本，减少版本冲突
ahash = "0.8"
async-channel = "2.5"
bitflags = "2.9"
hashbrown = "0.16"
indexmap = "2.11"
rand = "0.8"
getrandom = "0.3"
thiserror = "2.0"
heck = "0.5"
strsim = "0.11"
syn = "2.0"
darling = "0.21"
event-listener = "5.4"
foldhash = "0.2"


# dev-dependencies
tokio-test = "0.4"
rstest = "0.26.1"
serial_test = "3"
pretty_assertions = "1"

[dependencies]
# 工作空间内依赖
entity = { workspace = true }
migration = { workspace = true }

# 基础依赖（Phase 1 需要的）
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
notify = { workspace = true }
base64 = { workspace = true }
aes-gcm = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
md5 = { workspace = true }
flate2 = { workspace = true }
brotli-decompressor = { workspace = true }
dashmap = { workspace = true }
moka = { workspace = true }

# 核心依赖 - Pingora 和 Web 框架（使用最新版本）
pingora-core = { workspace = true }
pingora-proxy = { workspace = true }
pingora-load-balancing = { workspace = true }
pingora-http = { workspace = true }
axum = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
redis = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
clap = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
jsonwebtoken = { workspace = true }
oauth2 = { workspace = true }
bytes = { workspace = true }
bcrypt = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
num_cpus = { workspace = true }
sysinfo = { workspace = true }
ipnetwork = { workspace = true }
serde_with = { workspace = true }
urlencoding = { workspace = true }

# 统一依赖版本，减少版本冲突
ahash = { workspace = true }
async-channel = { workspace = true }
bitflags = { workspace = true }
hashbrown = { workspace = true }
indexmap = { workspace = true }
rand = { workspace = true }
getrandom = { workspace = true }
thiserror = { workspace = true }
heck = { workspace = true }
strsim = { workspace = true }
syn = { workspace = true }
darling = { workspace = true }
event-listener = { workspace = true }
foldhash = { workspace = true }




# 测试框架依赖（条件编译）
tempfile = { version = "3", optional = true }
mockall = { version = "0.13.1", optional = true }
wiremock = { version = "0.6", optional = true }

[dev-dependencies]
# 测试框架依赖
tokio-test = { workspace = true }
rstest = { workspace = true }
mockall = { version = "0.13.1" }
wiremock = { version = "0.6" }
serial_test = { workspace = true }
# 测试工具
pretty_assertions = { workspace = true }
# Note: reqwest 和 env_logger 已在主依赖中定义，无需重复


[features]
default = []
