[package]
name = "migration"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
sea-orm-migration = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dependencies.sea-orm]
workspace = true
features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
]